# ferroxy

./: .gitattributes  .gitignore  ARCHITECTURE.md  BENCHMARKS.md  CHANGELOG.md  CHARTER.md  CONFIG.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE-APACHE  README.md  deny.toml
.github/workflows/: ci.yml  release.yml
bench/: conduit.toml  run.sh
bench/compare/: README.md  compare.sh  methodology.md  nginx.conf.template  sysctls.sh
bench/micro/: README.md
contrib/: conduit.service
crates/conduit/: Cargo.toml
crates/conduit-config/: Cargo.toml
crates/conduit-config/src/: duration.rs  error.rs  lib.rs  schema.rs  validate.rs
crates/conduit-config/tests/: parse.rs
crates/conduit-config/tests/fixtures/: dummy.crt  dummy.key
crates/conduit-control/: Cargo.toml
crates/conduit-control/src/: admin.rs  lib.rs  metrics.rs
crates/conduit-h1/: Cargo.toml
crates/conduit-h1/src/: lib.rs
crates/conduit-h1/tests/: roundtrip.rs
crates/conduit-h2/: Cargo.toml
crates/conduit-h2/src/: lib.rs
crates/conduit-h2/tests/: roundtrip.rs
crates/conduit-h3/: Cargo.toml
crates/conduit-h3/src/: lib.rs
crates/conduit-io/: Cargo.toml
crates/conduit-io/src/: bind.rs  lib.rs  monoio_worker.rs  tokio_worker.rs
crates/conduit-io/tests/: echo.rs
crates/conduit-lifecycle/: Cargo.toml
crates/conduit-lifecycle/benches/: route_lookup.rs
crates/conduit-lifecycle/src/: lib.rs  table.rs
crates/conduit-lifecycle/tests/: dispatch.rs  end_to_end.rs
crates/conduit-proto/: Cargo.toml
crates/conduit-proto/src/: body.rs  cancel.rs  lib.rs
crates/conduit-proto/tests/: contract.rs
crates/conduit-transport/: Cargo.toml
crates/conduit-transport/src/: lib.rs  tls.rs
crates/conduit-upstream/: Cargo.toml
crates/conduit-upstream/src/: breaker.rs  health.rs  lib.rs  retry.rs  timed.rs
crates/conduit-upstream/tests/: forward.rs
crates/conduit/src/: log.rs  main.rs
crates/ferroxy/: Cargo.toml
crates/ferroxy-config/: Cargo.toml
crates/ferroxy-config/src/: lib.rs  schema.rs  validate.rs  workers.rs
crates/ferroxy-config/tests/: parse.rs
crates/ferroxy-control/: Cargo.toml
crates/ferroxy-control/src/: lib.rs
crates/ferroxy-h1/: Cargo.toml
crates/ferroxy-h1/src/: lib.rs
crates/ferroxy-h2/: Cargo.toml
crates/ferroxy-h2/src/: lib.rs
crates/ferroxy-h3/: Cargo.toml
crates/ferroxy-h3/src/: lib.rs
crates/ferroxy-io/: Cargo.toml
crates/ferroxy-io/src/: bind.rs  lib.rs  worker.rs
crates/ferroxy-io/tests/: echo.rs
crates/ferroxy-lifecycle/: Cargo.toml
crates/ferroxy-lifecycle/src/: lib.rs
crates/ferroxy-proto/: Cargo.toml
crates/ferroxy-proto/src/: lib.rs
crates/ferroxy-transport/: Cargo.toml
crates/ferroxy-transport/src/: lib.rs
crates/ferroxy-upstream/: Cargo.toml
crates/ferroxy-upstream/src/: lib.rs
crates/ferroxy/src/: log.rs  main.rs
examples/: conduit.toml  ferroxy.toml
fuzz/: .gitignore  Cargo.toml
fuzz/fuzz_targets/: h1_parser.rs
fuzz/seeds/h1_parser/: README.md  bogus_version  get_binary_path  get_with_headers  header_empty_value  header_no_space  leading_blank_lines  pipelined_minor  post_with_body  unknown_method  very_long_path
