[workspace]
resolver = "2"
members = [
    "crates/conduit",
    "crates/conduit-config",
    "crates/conduit-control",
    "crates/conduit-h1",
    "crates/conduit-h2",
    "crates/conduit-h3",
    "crates/conduit-io",
    "crates/conduit-lifecycle",
    "crates/conduit-proto",
    "crates/conduit-transport",
    "crates/conduit-upstream",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
license = "MIT OR Apache-2.0"
repository = "https://example.invalid/conduit"

[workspace.lints.rust]
unsafe_code = "forbid"
missing_debug_implementations = "warn"
unreachable_pub = "warn"
rust_2018_idioms = { level = "warn", priority = -1 }

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
# pedantic lints we deliberately silence project-wide
module_name_repetitions = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
must_use_candidate = "allow"
return_self_not_must_use = "allow"
# enforce: no panicking shortcuts on hot paths (will tighten per-crate later)
expect_used = "allow"
unwrap_used = "allow"

[workspace.dependencies]
# Phase 0 + Phase 1 deps. Each phase declares deps as it lands.
serde = { version = "1", features = ["derive"] }
toml = "0.8"
thiserror = "2"
anyhow = "1"
clap = { version = "4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json", "fmt"] }

# P1 — io layer
# monoio is the production runtime on Linux. tokio is the development
# fallback for macOS / non-Linux portability builds; it also serves as
# the comparison runtime for the bench harness in Phase 11.
monoio = { version = "0.2", default-features = false, features = ["legacy", "iouring", "macros"] }
core_affinity = "0.8"
tokio = { version = "1", features = ["rt", "rt-multi-thread", "net", "macros", "signal", "time", "sync", "io-util"] }
tokio-util = "0.7"
socket2 = { version = "0.5", features = ["all"] }
# binary-only: signal handling. Cleaner than rolling sigaction by hand
# and keeps `unsafe_code = "forbid"` everywhere else.
signal-hook = "0.3"

# P2 — proto layer (request/response stream contract)
http = "1"
http-body = "1"
http-body-util = "0.1"
bytes = "1"

# P6 — transport layer (TLS termination)
# rustls 0.23 with the `ring` crypto provider. The engineering charter
# calls for `aws-lc-rs`; we use `ring` first for build simplicity (no
# C compilation in dev path), and document the swap to aws-lc-rs as a
# P6.x deviation. Ring is mature and audited; the swap is a Cargo
# feature flip when the Phase 11 bench harness motivates it.
rustls = { version = "0.23", default-features = false, features = ["std", "tls12", "ring"] }
# PEM parsing: rustls-pki-types' PemObject trait is the maintained
# replacement for the now-archived rustls-pemfile crate (RUSTSEC-2025-0134).
rustls-pki-types = "1.9"
tokio-rustls = { version = "0.26", default-features = false, features = ["tls12", "ring"] }

# P9 — HTTP/3 (QUIC + h3). quinn 0.11 is the de-facto Rust QUIC stack;
# h3 + h3-quinn from hyperium provide HTTP/3 framing on top of it.
quinn = { version = "0.11", default-features = false, features = ["runtime-tokio", "rustls", "ring"] }
h3 = "0.0.8"
h3-quinn = "0.0.10"

# P3 — h1 layer (HTTP/1.1)
# hyper is chartered as the H1/H2 building block for early phases;
# replaced on the hot path in P11.6 only if profiling justifies.
hyper = { version = "1", features = ["http1", "http2", "server", "client"] }
hyper-util = { version = "0.1", features = ["http1", "http2", "server", "client", "client-legacy", "tokio"] }
httparse = "1"
# Bridge monoio's IoBuf-based traits to the tokio AsyncRead/AsyncWrite
# traits hyper expects. Linux-only dep.
monoio-compat = "0.2"
futures = "0.3"
pin-project-lite = "0.2"

# internal
conduit-config = { path = "crates/conduit-config", version = "0.1.0" }
conduit-control = { path = "crates/conduit-control", version = "0.1.0" }
conduit-h1 = { path = "crates/conduit-h1", version = "0.1.0" }
conduit-h2 = { path = "crates/conduit-h2", version = "0.1.0" }
conduit-h3 = { path = "crates/conduit-h3", version = "0.1.0" }
conduit-io = { path = "crates/conduit-io", version = "0.1.0" }
conduit-lifecycle = { path = "crates/conduit-lifecycle", version = "0.1.0" }
conduit-proto = { path = "crates/conduit-proto", version = "0.1.0" }

# Internal-only: exposed by `conduit-proto` for the lifecycle layer.
# Mirroring the `http` crate's major version is a load-bearing choice;
# do not bump without coordinating with the protocol crates.
conduit-transport = { path = "crates/conduit-transport", version = "0.1.0" }
conduit-upstream = { path = "crates/conduit-upstream", version = "0.1.0" }

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
debug = "line-tables-only"

[profile.bench]
opt-level = 3
lto = "thin"
codegen-units = 1
debug = "line-tables-only"
