[package]
name = "conduit-h1"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Layer 3: HTTP/1.1 parse and serialize. Builds on hyper (replaced on hot path in Phase 11.6 only if profiling justifies)."

[lints]
workspace = true

[dependencies]
conduit-proto = { workspace = true }

http = { workspace = true }
http-body = { workspace = true }
http-body-util = { workspace = true }
bytes = { workspace = true }
hyper = { workspace = true }
hyper-util = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
futures = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
