[package]
name = "conduit-h2"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Layer 3: HTTP/2 (RFC 9113). HPACK with bounded dynamic table."

[lints]
workspace = true

[dependencies]
bytes = { workspace = true }
hyper = { workspace = true }
hyper-util = { workspace = true }
tokio = { workspace = true }
thiserror = { workspace = true }

conduit-proto = { workspace = true }

[dev-dependencies]
http = { workspace = true }
http-body-util = { workspace = true }
tokio = { workspace = true }
