[package]
name = "ferroxy-config"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Parse and validate ferroxy configuration."

[lints]
workspace = true

[dependencies]
serde = { workspace = true }
toml = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
